--- a/bajadera.html
+++ b/bajadera.html
@@ -26,14 +26,11 @@
                 <a href="punjena-paprika.html"><h1>PUNJENA PAPRIKA</h1></a>
             </div>
             <div class="link">
-
-                <a href="pita.html"><h1>PITA</h1></a>
+ 
+                <a href="pita.html"><h1> PITA </h1></a>
             </div>
 
-         <div class="Back">
-
-            <a href="index.html"><h1>HOME</h1></a> 
-            </div>
+        
         </div>
         <div class="Box">
             <div class="Text1">
@@ -43,13 +40,13 @@
             </div>
             <div class="box1">
 
-                <div><img src="images/bajadera.jpg"></div>
-                <div><p>his simple cookie is the quintessential addition to any sitni kolači tray and is a family favorite around here. In fact, rarely do we have a slava or other special occasion where this recipe isn’t used to prepare a simple yet super delicious cookie.</p></div>
+                <div class="imagebox"><img src="images/bajadera.jpg"></div>
+                <div class="textbox"><p>This simple cookie is the quintessential addition to any sitni kolači tray and is a family favorite around here. In fact, rarely do we have a slava or other special occasion where this recipe isn’t used to prepare a simple yet super delicious cookie.</p></div>
             </div>
             <div class="book">
-                <div>
-                    <h1>Ingredients</h1>
-                    <ul>
+                <div >
+                    <h1>Ingredients:</h1>
+                    <ol>
                         <li>2 sticks (226 g) unsalted butter</li>
                         <li>2/3 cup (200 ml) water</li>
                         <li>1 cup (200 g) sugar</li>
@@ -59,18 +56,18 @@
                         <li>1/2 teaspoon (3 ml) vanilla extract</li>
                         <li>2 bars (200 g) dark chocolate</li>
                         <li>3 tablespoons (45 ml) oil</li>
-                    </ul>
+                    </ol>
                 </div>
                 <div>
-                    <h1>Steps</h1>
-                    <ul>
+                    <h1>Steps:</h1>
+                    <ol>
                         <li>In a medium saucepan heat the butter, water, sugar, and vanilla sugar on medium heat until the butter is melted. Once the mixture begins to boil, turn off the heat and remove the saucepan from the burner.</li>
                         <li>In a large mixing bowl, combine the walnuts, Plazma Keks, and vanilla extract, and lastly pour in the hot liquid. Mix all the ingredients together very well with a spatula.</li>
                         <li>Divide the mixture in half. Melt 1 bar of chocolate in the microwave or on the stove and add the melted chocolate to one half of the mixture. Mix well to incorporate the chocolate into the batter.</li>
                         <li>Grease a baking pan very lightly with oil or baking spray. Pour the chocolate half of the mixture into the pan and use a spatula into an even layer. Next, pour the other half (non-chocolate half) on top and spread into an even layer.</li>
                         <li>In a small saucepan or in the microwave, melt the remaining chocolate with the oil and pour across the top of the cookie batter in an even layer. Shake the pan lightly side to side and forward and back to spread the chocolate evenly.</li>
                         <li>When set, cut into desired shapes and serve. Store leftovers in the refrigerator.</li>
-                    </ul>
+                    </ol>
                 </div>
             </div>
 
