--- a/punjena-paprika.html
+++ b/punjena-paprika.html
@@ -22,17 +22,14 @@
             </div>
             <div class="link">
 
-                <a href="pita.html"><h1>PITA</h1></a>
+                <a href="pita.html"><h1> PITA </h1></a>
             </div>
             <div class="link">
 
                 <a href="bajadera.html"><h1>BAJADERA</h1></a>
             </div>
 
-         <div class="Back">
-
-            <a href="index.html"><h1>HOME</h1></a> 
-            </div>
+         
         </div>
         <div class="Box">
             <div class="Text1">
@@ -42,13 +39,13 @@
             </div>
             <div class="box1">
 
-                <div><img src="images/punjena-paprika.jpg"></div>
-                <div><p>This stuffed peppers recipe fills hollow green bell peppers with browned ground beef filling, cooked rice, and a seasoned tomato sauce for a simple and tasty meal. Top with shredded cheese 10 minutes before they finish baking if you like..</p></div>
+                <div class="imagebox"><img src="images/punjena-paprika.jpg"></div>
+                <div class="textbox"><p>This stuffed peppers recipe fills hollow green bell peppers with browned ground beef filling, cooked rice, and a seasoned tomato sauce for a simple and tasty meal. Top with shredded cheese 10 minutes before they finish baking if you like..</p></div>
             </div>
             <div class="book">
                 <div>
-                    <h1>Ingredients</h1>
-                    <ul>
+                    <h1>Ingredients:</h1>
+                    <ol>
                         <li>1 cup cold water</li>
                         <li>1/2 cup uncooked long grain white rice</li>
                         <li>1 tablespoon vegetable oil</li>
@@ -57,21 +54,18 @@
                         <li>16 ounces tomato sauce, divided</li>
                         <li>1 tablespoon Worcestershire sauce</li>
                         <li>1/4 teaspoon garlic powder</li>
-                        <li>1/4 teaspoon garlic powder</li>
-                        <li>1/2 teaspoon garlic powder</li>
-                        <li>salt and ground black pepper to taste</li>
-                        <li>1 teaspoon Italian seasoning</li>
-                    </ul>
+                
+                    </ol>
                 </div>
                 <div>
-                    <h1>Steps</h1>
-                    <ul>
+                    <h1>Steps:</h1>
+                    <ol>
                         <li>Gather all ingredients, and preheat the oven to 350 degrees F (175 degrees C).</li>
                         <li>Bring water and rice to a boil in a covered saucepan. Reduce heat to low and simmer until rice is tender, about 20 minutes.</li>
                         <li>Meanwhile, heat oil in a skillet over medium heat. Add ground beef and cook until evenly browned and crumbly, 7 to 9 minutes.</li>
                         <li>Hollow out bell peppers by removing and discarding the tops, seeds, and membranes. Slice the bottoms of the peppers if necessary to make sure they stand up straight.</li>
                     <li>Prepare filling by mixing cooked beef, cooked rice, 1/2 of the tomato sauce, Worcestershire sauce, garlic powder, onion powder, salt, and pepper. Spoon an equal amount of filling into each hollowed pepper.Bake in the preheated oven, basting with sauce every 15 minutes, until peppers are tender, about 1 hour.</li>
-                    </ul>
+                    </ol>
                 </div>
             </div>
 
