--- a/sarma.html
+++ b/sarma.html
@@ -22,17 +22,14 @@
             </div>
             <div class="link">
 
-                <a href="pita.html"><h1>PITA</h1></a>
+                <a href="pita.html"><h1> PITA </h1></a>
             </div>
             <div class="link">
 
                 <a href="bajadera.html"><h1>BAJADERA</h1></a>
             </div>
          
-         <div class="Back">
-
-            <a href="index.html"><h1>HOME</h1></a> 
-            </div>
+        
         </div>
         <div class="Box">
             <div class="Text1">
@@ -42,13 +39,13 @@
             </div>
             <div class="box1">
 
-                <div><img src="images/54603435e3bbbdc6f59b10cea09c6bb0_sarma.png"></div>
-                <div><p>For this satisfying sarma dish, cabbage leaves are stuffed with a seasoned mixture of rice, ground beef, pork, and ham. They are then laid on a bed of sauerkraut and simmered to completion. This is the best stuffed cabbage recipe I've ever tried.</p></div>
+                <div class="imagebox"><img src="images/54603435e3bbbdc6f59b10cea09c6bb0_sarma.png"></div>
+                <div class="textbox"><p>For this satisfying sarma dish, cabbage leaves are stuffed with a seasoned mixture of rice, ground beef, pork, and ham. They are then laid on a bed of sauerkraut and simmered to completion. This is the best stuffed cabbage recipe I've ever tried.</p></div>
             </div>
             <div class="book">
-                <div>
-                    <h1>Ingredients</h1>
-                    <ul>
+                <div >
+                    <h1>Ingredients:</h1>
+                    <ol>
                         <li>1 large head cabbage, frozen for 3 days, then thawed overnight in the refrigerator</li>
                         <li>1 pound lean ground beef</li>
                         <li>1/2 pound ground pork</li>
@@ -61,15 +58,15 @@
                         <li>1/2 teaspoon garlic powder</li>
                         <li>1 pound sauerkraut</li>
                         <li>1 cup tomato juice</li>
-                    </ul>
+                    </ol>
                 </div>
                 <div>
-                    <h1>Steps</h1>
-                    <ul>
+                    <h1>Steps:</h1>
+                    <ol>
                         <li>Remove the leaves from the head of cabbage.</li>
                         <li>Mix beef, pork, ham, uncooked rice, onion, egg, salt, pepper, and garlic powder together in a bowl until well combined. Form mixture into oblong balls, using 1/2 cup of the mixture at a time. Wrap a cabbage leaf around each ball.</li>
                         <li>Spread sauerkraut in the bottom of a large pot. Layer cabbage rolls on top, placing them seam-side down. Pour tomato juice over rolls, then add enough water to cover and bring to a boil. Reduce the heat to low and simmer for about 3 hours, adding more water as necessary.</li>
-                    </ul>
+                    </ol>
                 </div>
             </div>
 
