--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="Recipes">
 
                 <a href="sarma.html"> <div class="banner"><img src="images/54603435e3bbbdc6f59b10cea09c6bb0_sarma.png"><h2>SARMA</h2></div></a>
-                <a href="punjena-paprika.html"> <div class="banner"><img src="images/punjena-paprika.jpg"><h2>PUNJENA PAPRIKA</h2></div></a>
+                <a href="punjena-paprika.html"> <div class="banner"><img src="images/punjena-paprika.jpg"><h2>PUNJENA PAP</h2></div></a>
                     <a href="pita.html"><div class="banner"><img src="images/pita.jpg"><h2>PITA</h2></div></a>
                         <a href="bajadera.html"> <div class="banner"><img src="images/bajadera.jpg"><h2>BAJADERA</h2></div></a>
             </div>
